fix z-index

--- a/src/components/header/header.scss
+++ b/src/components/header/header.scss
@@ -47,7 +47,7 @@
     bottom: 0;
     padding: 40px;
     width: 100%;
-    z-index: 50;
+    z-index: 49;
     @include media-breakpoint-down(lg) {
       padding: 40px 20px;
     }
@@ -238,7 +238,7 @@
   width: 100%;
   padding: 15px 40px;
   background-color: $white;
-  z-index: 60;
+  z-index: 50;
   justify-content: space-between;
   align-items: center;
   transition: all 0.2s ease-in-out;
